--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,27 @@
             "name": "Launch",
             "type": "node",
             "request": "launch",
-            "program": "${workspaceRoot}/pairs.js",
+            "program": "${workspaceRoot}/Ast1_AC.js",
+            "stopOnEntry": false,
+            "args": [],
+            "cwd": "${workspaceRoot}",
+            "preLaunchTask": null,
+            "runtimeExecutable": null,
+            "runtimeArgs": [
+                "--nolazy"
+            ],
+            "env": {
+                "NODE_ENV": "development"
+            },
+            "externalConsole": false,
+            "sourceMaps": false,
+            "outDir": null
+        },
+         {
+            "name": "Launch Tester",
+            "type": "node",
+            "request": "launch",
+            "program": "${workspaceRoot}/tester.js",
             "stopOnEntry": false,
             "args": [],
             "cwd": "${workspaceRoot}",
